# synthe_alea

./: .gitignore  AudioFile.cpp  AudioFile.h  LICENSE  Makefile  main.cpp  synthese_additive_decisionnelle.h
console/: main.cpp
includes/: synthese_additive_decisionnelle.h
librairie AudioFile/: AudioFile.cpp
libsynthalea/: f_alloc.c  f_alloc_mat.c  f_alloc_matAF.c  f_construction_oscillateurs.c  f_desalloc.c  f_desalloc_mat.c  f_desalloc_matAF.c  f_get.c  f_set.c  f_synthese.c  fn_allocation_banque_spectres.c  fn_allocation_oscillateur.c  fn_allocation_spectre.c  fn_analyser_spectre.c  fn_charger_spectres.c  fn_desallocation_spectre.c  fn_sauvegarder_spectres.c  fn_synthese.c  libsynthalea.h  main.c
operationnal_parts/: .CMakeLists.txt.swp  CMakeLists.txt
operationnal_parts/Source_Related_Doc/: what_may_be_done.txt  what_will_be_done.txt
operationnal_parts/includes/: .utils.h.swp  core.h  utils.h  utils.h.gch
operationnal_parts/src/: .main.c.swp  main.c
operationnal_parts/src/core/: do_operations.c  finish.c  initialize.c
operationnal_parts/src/utils/exit/: exit.c  exit.h
operationnal_parts/src/utils/file_management/: parsing.c  parsing.h
operationnal_parts/src/utils/type_management/conversion/: conversion.c  conversion.h
operationnal_parts/src/utils/type_management/type_questions/: type_questions.c  type_questions.h
operationnal_parts/src/utils/vector/: vector.c  vector.h
operationnal_parts/tests/: test_main.c  vector_invalid1.txt  vector_to_extract.txt  vector_wrong_format.txt
outils/: creation_spectre.m
prototype matlab/: test.m
(+73 files in other folders)
